--- a/src/PueblaApi/appsettings.Development.json
+++ b/src/PueblaApi/appsettings.Development.json
@@ -4,5 +4,32 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DbSettings": {
+    "Host": "127.0.0.1",
+    "Port": "5432",
+    "Database": "",
+    "Username": "",
+    "Password": ""
+  },
+  "JwtConfiguration": {
+    "Secret": "",
+    "ExpiryTimeFrame": "00:01:00"
+  },
+  "RefreshTokenConfiguration": {
+    "ExpiryDateDays": "1",
+    "TokenSize": "64"
+  },
+  "AdminUserConfiguration": {
+    "Email": "",
+    "Username": "",
+    "FirstName": "",
+    "LastName": "",
+    "NationalId": "",
+    "Password": ""
+  },
+  "EmailConfiguration": {
+    "ApiKey": "",
+    "Sender": ""
   }
 }
