--- a/src/PueblaApi/appsettings.json
+++ b/src/PueblaApi/appsettings.json
@@ -5,5 +5,32 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DbSettings": {
+    "Host": "",
+    "Port": "",
+    "Database": "",
+    "Username": "",
+    "Password": ""
+  },
+  "JwtConfiguration": {
+    "Secret": "",
+    "ExpiryTimeFrame": ""
+  },
+  "RefreshTokenConfiguration": {
+    "ExpiryDateDays": "",
+    "TokenSize": ""
+  },
+  "AdminUserConfiguration": {
+    "Email": "",
+    "Username": "",
+    "FirstName": "",
+    "LastName": "",
+    "NationalId": "",
+    "Password": ""
+  },
+  "EmailConfiguration": {
+    "ApiKey": "",
+    "Sender": ""
+  },
   "AllowedHosts": "*"
 }
