Validate audience and issuer on JWT (#3)
Also added audience and issuer to secrets file (not available on repository).

--- a/src/PueblaApi/appsettings.json
+++ b/src/PueblaApi/appsettings.json
@@ -14,7 +14,9 @@
   },
   "JwtConfiguration": {
     "Secret": "",
-    "ExpiryTimeFrame": ""
+    "ExpiryTimeFrame": "",
+    "Audience": "",
+    "Issuer":  ""
   },
   "RefreshTokenConfiguration": {
     "ExpiryDateDays": "",
