Remote deployment to remote database [PUEBLA-16]
New connection string.

AdminUserConfiguration attributes FirstName, LastName and NationalID were removed as they are no longer needed.

--- a/src/PueblaApi/appsettings.Development.json
+++ b/src/PueblaApi/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "DbSettings": {
-    "Host": "127.0.0.1",
-    "Port": "5432",
+    "Host": "",
+    "Port": "",
     "Database": "",
     "Username": "",
     "Password": ""
