ExpiryTimeFrame now injected as environment variable [PUEBLA-16].

--- a/src/PueblaApi/appsettings.Development.json
+++ b/src/PueblaApi/appsettings.Development.json
@@ -14,7 +14,7 @@
   },
   "JwtConfiguration": {
     "Secret": "",
-    "ExpiryTimeFrame": "00:10:00"
+    "ExpiryTimeFrame": ""
   },
   "RefreshTokenConfiguration": {
     "ExpiryDateDays": "1",
