Seed data flag added
Data should only be seeded he first time the app is run.

Set a flag that determines whether we should try to seed the data or not.

--- a/src/PueblaApi/appsettings.json
+++ b/src/PueblaApi/appsettings.json
@@ -10,7 +10,8 @@
     "Port": "",
     "Database": "",
     "Username": "",
-    "Password": ""
+    "Password": "",
+    "SeedData": ""
   },
   "JwtConfiguration": {
     "Secret": "",
