--- a/src/PueblaApi/appsettings.json
+++ b/src/PueblaApi/appsettings.json
@@ -19,10 +19,6 @@
     "Audience": "",
     "Issuer": ""
   },
-  "RefreshTokenConfiguration": {
-    "ExpiryDateDays": "",
-    "TokenSize": ""
-  },
   "AdminUserConfiguration": {
     "Email": "",
     "Username": "",
@@ -37,6 +33,15 @@
   },
   "WebClientSettings": {
     "Host": ""
+  },
+  "ImageServiceConfiguration": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": "",
+    "MaxWidth": 200,
+    "MaxHeight": 200,
+    "AssetFolderName": "",
+    "MaxFileSize": 2097152
   },
   "AllowedHosts": "*"
 }
